Map#entries and Map#keys error for non-Maps is swapped https://bugs.webkit.org/show_bug.cgi?id=144253

Patch by Jordan Harband <ljharb@gmail.com> on 2015-04-27
Reviewed by Simon Fraser.

Correcting error messages on Set/Map methods when called on
incompatible objects.

* runtime/MapPrototype.cpp:
(JSC::mapProtoFuncEntries):
(JSC::mapProtoFuncKeys):
* runtime/SetPrototype.cpp:
(JSC::setProtoFuncEntries):

Canonical link: https://commits.webkit.org/162266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183402 268f45cc-cd09-0410-ab3c-d52691b4dbfc